gateway updated ratingfile added

--- a/gateway.properties
+++ b/gateway.properties
@@ -8,6 +8,10 @@ zuul.routes.book-service.path = /book-service/**
 zuul.routes.book-service.sensitive-headers=Set-Cookie,Authorization
 hystrix.command.book-service.execution.isolation.thread.timeoutInMilliseconds=600000
 
+zuul.routes.book-service.path = /rating-service/**
+zuul.routes.book-service.sensitive-headers=Set-Cookie,Authorization
+hystrix.command.book-service.execution.isolation.thread.timeoutInMilliseconds=600000
+
 zuul.routes.discovery.path = /discovery/**
 zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
 zuul.routes.discovery.url=http://localhost:8082
