--- a/security-service.properties
+++ b/security-service.properties
@@ -1,5 +1,5 @@
-spring.application.name=book-service
-server.port=8013
+spring.application.name=security-service
+server.port=8080
 
 eureka.client.region=default
 eureka.client.registryFetchIntervalSeconds=5
