--- a/customer-service.properties
+++ b/customer-service.properties
@@ -1,5 +1,5 @@
-spring.application.name=book-service
-server.port=8013
+spring.application.name=customer-service
+server.port=8084
 
 eureka.client.region=default
 eureka.client.registryFetchIntervalSeconds=5
