--- a/manufacturer-service.properties
+++ b/manufacturer-service.properties
@@ -1,5 +1,5 @@
-spring.application.name=book-service
-server.port=8013
+spring.application.name=manufacturer-service
+server.port=8082
 
 eureka.client.region=default
 eureka.client.registryFetchIntervalSeconds=5
